--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,10 +1,15 @@
 pipeline {
-    agent {
-        docker {
-            image 'node:lts-buster-slim'
-            args '-p 3000:3000'
-        }
-    }
+    // agent {
+    //     docker {
+    //         image 'node:lts-buster-slim'
+    //         args '-p 3000:3000'
+    //     }
+    // }
+
+    agent any
+    tools {nodejs "node"}
+
+
     environment {
         CI = 'true'
     }
