--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -19,17 +19,17 @@ pipeline {
                 bat 'npm install'
             }
         }
-        stage('Test') {
-            steps {
-                bat './jenkins/scripts/test.sh'
-            }
-        }
-        stage('Deliver') {
-            steps {
-                bat './jenkins/scripts/deliver.sh'
-                input message: 'Finished using the web site? (Click "Proceed" to continue)'
-                bat './jenkins/scripts/kill.sh'
-            }
-        }
+        // stage('Test') {
+        //     steps {
+        //         bat './jenkins/scripts/test.sh'
+        //     }
+        // }
+        // stage('Deliver') {
+        //     steps {
+        //         bat './jenkins/scripts/deliver.sh'
+        //         input message: 'Finished using the web site? (Click "Proceed" to continue)'
+        //         bat './jenkins/scripts/kill.sh'
+        //     }
+        //}
     }
 }
