--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -10,9 +10,9 @@ pipeline {
     tools {nodejs "node"}
 
 
-    environment {
-        CI = 'true'
-    }
+    // environment {
+    //     CI = 'true'
+    // }
     stages {
         stage('Build') {
             steps {
